--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,4 +3,6 @@ firebase-admin==6.6.0
 python-decouple==3.8
 gunicorn==23.0.0
 dj-database-url==2.3.0
-whitenoise==6.9.0 
+whitenoise==6.9.0
+bcrypt==4.1.3
+PyJWT==2.8.0 
