--- a/frontend/app.json
+++ b/frontend/app.json
@@ -4,9 +4,8 @@
     "slug": "viccoin",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icone.png",
     "userInterfaceStyle": "dark",
-    "newArchEnabled": true,
     "experiments": {
       "tsconfigPaths": true
     },
@@ -21,14 +20,6 @@
         "NSFaceIDUsageDescription": "Este aplicativo usa o Face ID para permitir um login mais rápido e seguro."
       },
       "bundleIdentifier": "com.viccoin.app"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#6A36D9"
-      },
-      "permissions": ["USE_BIOMETRIC", "USE_FINGERPRINT"],
-      "package": "com.viccoin.app"
     },
     "web": {
       "favicon": "./assets/favicon.png"
