--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,9 @@
 django==5.1.7
-firebase-admin==6.6.0
-python-decouple==3.8
+firebase-admin==5.1.0
+python-decouple==3.6
 gunicorn==23.0.0
 dj-database-url==2.3.0
-whitenoise==6.9.0
+whitenoise==6.2.0
 bcrypt==4.1.3
-PyJWT==2.8.0 
+PyJWT==2.8.0
+django-cors-headers==4.3.1 
