--- a/imagens/desktop.ini
+++ b/imagens/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 Captura de tela 2025-03-11 152241.png=@Captura de tela 2025-03-11 152241,0
 Captura de tela 2025-03-11 165607.png=@Captura de tela 2025-03-11 165607,0
+IMG_0895.PNG=@IMG_0895,0
